<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pid_challenge</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="mahe@todo.todo">mahe</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
      <launch_file>launch/pid_launcher.launch.py</launch_file>
  </export>

  <exec_depend>launch</exec_depend>
<exec_depend>launch_ros</exec_depend>


</package>
